# queens-cli

./: Cargo.toml  LICENSE  README.md
src/: app.rs  args.rs  event.rs  input.rs  lib.rs  main.rs  ui.rs
src/board/: empty.rs  mod.rs  player_pos.rs  queen.rs  swapper.rs
src/board_selection/: mod.rs
src/ui_components/: mod.rs  sidebar.rs  win_popup.rs
src/ui_components/board/: column_numbers.rs  mod.rs  row_numbers.rs
