[package]
name = "queens-cli"
version = "0.1.0"
description = "Logical game inspired by Queens game from LinkedIn, but in CLI"
authors = ["kyncl <145004616+kyncl@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
clap = { version = "4.5.60", features = ["derive"] }
anyhow = "1.0.102"
strum = "0.28"
strum_macros = "0.28"
serde = { version = "1.0", features = ["derive"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
